# AI_SDK

./: .env.example  .gitignore  BUILD_SUMMARY.md  README.md  chatDB.db
ChatServer/: CMakeLists.txt  ChatServer.conf  ChatServer.cpp  ChatServer.h  ai_chat_sdk  chatDB.db  main.cpp
ChatServer/www/: index.html
ChatServer/www/css/: style.css
ChatServer/www/js/: app.js
SDK/: CMakeLists.txt
SDK/include/: ChatSDK.h  DeepSeekProvider.h  KimiProvider.h  LLMManager.h  LLMProvider.h  OllamalProvider.h  SessionManager.h  common.h
SDK/include/util/: myLog.h
SDK/src/: ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  GLMProvider.cpp  KimiProvider.cpp  LLMManager.cpp  OllamalProvider.cpp  SessionManager.cpp
include/: DataManager.h  DeepSeekProvider.h  GLMProvider.h  LLMProvider.h  SessionManager.h  common.h
include/util/: myLog.h
src/: DataManager.cpp  DeepSeekProvider.cpp  GLMProvider.cpp  KimiProvider.cpp  OllamalProvider.cpp  SessionManager.cpp
src/util/: myLog.cpp
test/: CMakeLists.txt  TestLLM.cpp
